add service class